--- a/pages/patientpages/appointment.html
+++ b/pages/patientpages/appointment.html
@@ -35,9 +35,9 @@
 <div class="container">
   <div class="appimg">
     <h4>booking id:#336</h4>
-    <img src="../../assets/images/doctor.jpg" width="500px" alt="">
+   <img src="../../assets/images/doctor.jpg" width="500px" alt="">
    
-  <!---  <img src="../../assets/images/doctor2.jpg" width="500px" alt=""> --->
+    <!-- <img src="../../assets/images/doctor2.jpg" width="500px" alt=""> -->
   </div>
   <div class="abtdoc">
     <div class="texts">
