added booking page

--- a/pages/patientpages/gethelp.html
+++ b/pages/patientpages/gethelp.html
@@ -47,7 +47,7 @@
                     
                     <div class="dropdown-menu1">
                         <ul>
-                            <li><a href="">Book nearby hopitals</a></li>
+                            <li><a href="../patientpages/bookhospital.html">Book nearby hopitals</a></li>
                             <li><a href="../patientpages/appointment.html">View appointments</a></li>
                         </ul>
                     </div>
