added more pages

--- a/pages/patientpages/gethelp.html
+++ b/pages/patientpages/gethelp.html
@@ -58,7 +58,7 @@
                     <p>hey my lovely brothers and sisters<br>here we give you more products at low cost ffroom our
                         trust<br>
                         Click the below button to buy products<br> which can help you more</p>
-                    <a href=""><button class="join">BUY PRODUCTS</button></a>
+                    <a href="../patientpages/buyproducts.html"><button class="join">BUY PRODUCTS</button></a>
                 </div>
                 <div class="schemes">
                     <h1>Govt Schemes</h1>
@@ -144,7 +144,7 @@
         </div>
         </section>
     </main>
-</body>
+
 <footer id="footer">
     <div class="foot1">
       <img src="../../assets/images/logo.png" width="180px" alt="">
@@ -188,4 +188,5 @@
       </div>
     </div>
   </footer>
+</body>
 </html>
