--- a/index.html
+++ b/index.html
@@ -113,10 +113,7 @@
       <div class="add">
         <h4>FRESHTRUST:</h4>
 
-        <p>AAAAAAAAAAAA;<br>
-          BBBBBBBBBBBBBB;<br>
-          ccccccccccccccc;<br>
-          Chennai - 000 000.</p>
+        <p> Sathyadev Ave, opp.<br> Chettinad Vidyashram, MRC Nagar<br> Raja Annamalai Puram,<br> Chennai, Tamil Nadu 600028</p>
       </div>
       <div class="mail">
         <h4>Phone numbers: (11.00 AM to 7.00 PM)</h4>
