--- a/pages/patientpages/appointment.html
+++ b/pages/patientpages/appointment.html
@@ -19,7 +19,7 @@
       <li><a href="../../index.html">HOME</a></li>
       <li><a href="../donarpages/donarlogin.html">DONATE US</a></li>
       <li><a href="../about/aboutus.html">ABOUT</a></li>
-      <li><a href="#">GET HELP</a>
+      <li><a href="gethelp.html">GET HELP</a>
 
         <!-- <div class="dropdown-menu">
           <ul>
@@ -50,13 +50,13 @@
       <h2>ADDRESS</h2>
     </div>
     <div class="infos">
-      <h4>jhon</h4>
+      <h4>JHON</h4>
       <h4>vellamal hospital</h4>
       <h4>7305876534</h4>
       <h4>9-12am</h4>
       <h4>9-12-2022</h4>
       <h4>NONE</h4>
-      <h4>AAAAAAAAAAAA<br>BBBBBBBBBBBBBB<br>ccccccccccccccc</h6>
+      <h4>ganhinagar,main road<br>palavakam,omr near<br>chennai-15<br>tamilnadu</h4>
     </div>
   </div>
 </div>
@@ -78,10 +78,7 @@
     <div class="add">
       <h4>FRESHTRUST:</h4>
 
-      <p>AAAAAAAAAAAA;<br>
-        BBBBBBBBBBBBBB;<br>
-        ccccccccccccccc;<br>
-        Chennai - 000 000.</p>
+      <p> Sathyadev Ave, opp.<br> Chettinad Vidyashram, MRC Nagar<br> Raja Annamalai Puram,<br> Chennai, Tamil Nadu 600028</p>
     </div>
     <div class="mail">
       <h4>Phone numbers: (11.00 AM to 7.00 PM)</h4>
