--- a/pages/patientpages/contact.html
+++ b/pages/patientpages/contact.html
@@ -42,6 +42,8 @@
     <h3>mail address</h3>
     <p>isacddevaabishek2@gamil.com<br><br>
     devaabishek2002@gmail.com</p>
+    <h3>address</h3>
+    <p> Sathyadev Ave, opp.<br> Chettinad Vidyashram, MRC Nagar<br> Raja Annamalai Puram,<br> Chennai, Tamil Nadu 600028</p>
     <h2>Contact us for more details and more products</h2>
 </div>
 </section>
