--- a/pages/patientpages/gethelp.html
+++ b/pages/patientpages/gethelp.html
@@ -66,7 +66,7 @@
                         for diffrently abled peoples
                         <br> Click the below buton to view more
                     </p>
-                    <a href=""><button class="join">VIEW SCHEMES</button></a>
+                    <a href="../patientpages/govt.html"><button class="join">VIEW SCHEMES</button></a>
                 </div>
             </div>
             <div class="info">
@@ -163,10 +163,7 @@
       <div class="add">
         <h4>FRESHTRUST:</h4>
 
-        <p>AAAAAAAAAAAA;<br>
-          BBBBBBBBBBBBBB;<br>
-          ccccccccccccccc;<br>
-          Chennai - 000 000.</p>
+        <p> Sathyadev Ave, opp.<br> Chettinad Vidyashram, MRC Nagar<br> Raja Annamalai Puram,<br> Chennai, Tamil Nadu 600028</p>
       </div>
       <div class="mail">
         <h4>Phone numbers: (11.00 AM to 7.00 PM)</h4>
