changes whhel chAIR

--- a/pages/patientpages/buyproducts.html
+++ b/pages/patientpages/buyproducts.html
@@ -50,14 +50,14 @@
                 </div>
                 <div class="products">
                     <img src="../../assets/images/wheelchair.jfif" alt="image error">
-                    <h1>HEARING AID</h1>
-                    <p>here hereing aid  for you contact to buy</p>
+                    <h1>WHEEL CHAIR</h1>
+                    <p>here wheel CHAIR  for you contact to buy</p>
                     <a href="../patientpages/wheelchair.html"><button class="join">Contact</button></a>
                 </div>
                 <div class="products">
                     <img src="../../assets/images/Special hearing aids.jpg" alt="image error">
-                    <h1>WHEEL CHAIR</h1>
-                    <p>here wheel chair for you contact to buy</p>
+                    <h1>HEARING AID</h1>
+                    <p>here wheel CHAIR for you contact to buy</p>
                     <a href=""><button class="join">Contact</button></a>
                 </div>
                 <div class="products">
