--- a/pages/patientpages/appointment.html
+++ b/pages/patientpages/appointment.html
@@ -27,7 +27,7 @@
           </ul>
         </div> -->
       </li>
-      <li><a href="">GET INVOLVED</a></li>
+      <li><a href="../donarpages/involve.html">GET INVOLVED</a></li>
       <li><a href="">BE INSPIRED</a></li>
     </ul>
   </div>
