--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </ul>
         </div>
       </li>
-      <li><a href="">GET INVOLVED</a></li>
+      <li><a href="pages/donarpages/involve.html">GET INVOLVED</a></li>
       <li><a href="">BE INSPIRED</a></li>
     </ul>
   </div>
@@ -71,7 +71,7 @@
         <h1>GET INVOLVED</h1>
         <p> “ when We Give Cheerfully And Accept Gratefully, Everyone Is Blessed.”</p>
         <p>Click here to join with us as volunteer and donate us </p>
-        <br><a href=""><button class="join">JOIN WITH US</button></a>
+        <br><a href="pages/donarpages/involve.html"><button class="join">JOIN WITH US</button></a>
       </div>
     </section>
     <section class="main5">
