--- a/pages/about/aboutus.html
+++ b/pages/about/aboutus.html
@@ -28,7 +28,7 @@
                     </ul>
                 </div>
             </li>
-            <li><a href="">GET INVOLVED</a></li>
+            <li><a href="../donarpages/involve.html">GET INVOLVED</a></li>
             <li><a href="">BE INSPIRED</a></li>
         </ul>
     </div>
