--- a/pages/patientpages/gethelp.html
+++ b/pages/patientpages/gethelp.html
@@ -27,7 +27,7 @@
                     
                  -->
             </li>
-            <li><a href="">GET INVOLVED</a></li>
+            <li><a href="../donarpages/involve.html">GET INVOLVED</a></li>
             <li><a href="">BE INSPIRED</a></li>
         </ul>
     </div>
