--- a/pages/patientpages/patientlogin.html
+++ b/pages/patientpages/patientlogin.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <form>
     <div class="contianer">
         <div class="formbox">
             <div class="btns">
@@ -34,7 +35,7 @@
 
                 </div>
                 <hr id="logbtnhr">
-                <a href="../patientpages/gethelp.html"><button class="join">LOGIN</button></a>
+                <a href="../patientpages/gethelp.html"><button class="join">LOGIN</button></a></form>
                 <div class="loginimgs">
                     <p>Or Login With</p>
                 </div>
