--- a/pages/about/aboutus.html
+++ b/pages/about/aboutus.html
@@ -18,6 +18,7 @@
         <img src="../../assets/images/logo.png" width="200px" alt="">
         <ul>
             <li><a href="../../index.html">HOME</a></li>
+            <li><a href="index.html">SCHEMES</a></li>
             <li><a href="../donarpages/donarlogin.html">DONATE US</a></li>
             <li><a href="#">ABOUT</a></li>
             <li><a href="#">GET HELP</a>
