--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <img src="assets/images/logo.png" width="200px" alt="">
     <ul>
       <li><a href="index.html">HOME</a></li>
-      <li><a href="index.html">SCHEMES</a></li>
+      <li><a href="pages/about/schemes.html">SCHEMES</a></li>
       <li><a href="pages/donarpages/donarlogin.html">DONATE US</a></li>
       <li><a href="pages/about/aboutus.html">ABOUT</a></li>
       <li><a href="#">GET HELP</a>
