--- a/pages/about/aboutus.html
+++ b/pages/about/aboutus.html
@@ -18,9 +18,9 @@
         <img src="../../assets/images/logo.png" width="200px" alt="">
         <ul>
             <li><a href="../../index.html">HOME</a></li>
-            <li><a href="index.html">SCHEMES</a></li>
+            <li><a href="../about/schemes.html">SCHEMES</a></li>
             <li><a href="../donarpages/donarlogin.html">DONATE US</a></li>
-            <li><a href="#">ABOUT</a></li>
+            <li><a href="../about/aboutus.html">ABOUT</a></li>
             <li><a href="#">GET HELP</a>
 
                 <div class="dropdown-menu">
