--- a/pages/about/apply.html
+++ b/pages/about/apply.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="icon" href="../../assets/images/icon.png">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700&display=swap">
-    <title>gethelp</title>
+    <title>shemes</title>
 </head>
 
 <body>
@@ -36,28 +36,40 @@
 <main>
     <section>
         <div class="gethelpbg">
-            <h1>BE INVOLVED</h1>
+            <h1>HOW TO APPLY</h1>
         </div>
     </section>
         <section class="sec1">
             <div class="volunteer">
-                <h1>BE A VOLUNTEER</h1>
-                <p>Volunteering is basically providing services with a free will, without any expectation.<br> Volunteering is viewed as a significant means to involve people to contribute their<br> resources and skills in the process of development of the society.
-                    Volunteering is simple.<br> It’s about giving your time to do something useful, without getting paid. In return you get<br> the satisfaction of time and effort well spent.<br> 
+                <h1>DISABLITY ID CREATION<br>step:1</h1>
+                <p>go to the website named <a href="https://www.swavlambancard.gov.in/">swavlambancard.gov.in</a> to create id and touch the option in right side<br> &quot;GET YOUR DISALITY CERTIFICATE AND UDID CARD&quot; 
                     </p>
-                    <a href="../volunteerpages/volunteersignup.html"><button class="join">Create account</button></a>
+                    <a href="https://www.swavlambancard.gov.in/"><button class="join">CLICK HERE</button></a>
             </div>
-          <img src="../../assets/images/buyproducts.webp"  alt="error">
+          <img src="../../assets/images/apply1 (1).png" width="600px" alt="error">
         </section><br>
         <section class="sec1">
-            <img src="../../assets/images/donate.png" alt="error">
+            <img src="../../assets/images/apply1 (2).png" width="600px" alt="error">
         <div class="donate">
-            <h1> BE A DONAR</h1>
-            <p>In addition, volunteering can be a way to meet new people, learn new skills,<br> and gain useful experienceThe opportunities are huge. There is something<br> that you can do with whatever skills and experience you have. The best way<br> to see what is available is to contact us.
-                The biggest problem for many people is finding<br> the time to volunteer. It can reduce your choices if you don’t have much time to spare,<br> but many busy people do find suitable opportunities.</p>
-                <a href="donarsignup.html"><button class="join">Create account</button></a>
+            <h1>Step:2</h1>
+            <p>Fill up the details in the next page.fill the personal details,<br>disablity details,employment details and identity details and click the<br> submit button with otp verification.</p>
         </div>
     </section>
+    <section class="sec1">
+        <div class="volunteer">
+            <h1>Step:3</h1>
+            <p>you can view the the certificate and udid status in the right side of this page</p>
+        </div>
+      <img src="../../assets/images/apply1 (1).png"width=600px;  alt="error">
+    </section><br>
+    <section class="sec1">
+        <img src="../../assets/images/pdf2.png" width="600px" alt="error">
+    <div class="donate">
+        <h1>Applying for scheme<br>step:4</h1>
+        <p>apply for the shemes in this <a href="https://chennai.nic.in/ta/differently-abled-welfare-schemes/">chennai nic diffrently abled people website</a> You can view more schemes<br>and mode of application in that View the type of scheme and download the application form <br>and send it to the llink provided on the downloaded file</p>
+            <a href=""><button class="join">CLICK HERE</button></a>
+    </div>
+</section>
     <footer id="footer">
         <div class="foot1">
           <img src="../../assets/images/logo.png" width="180px" alt="">
@@ -101,4 +113,3 @@
       </body>
       
       </html>
-      
