--- a/pages/patientpages/gethelp.html
+++ b/pages/patientpages/gethelp.html
@@ -19,7 +19,7 @@
         <ul>
             
             <li><a href="../../index.html">HOME</a></li>
-            <li><a href="index.html">SCHEMES</a></li>
+            <li><a href="../about/schemes.html">SCHEMES</a></li>
             <li><a href="../donarpages/donarlogin.html">DONATE US</a></li>
             <li><a href="../about/aboutus.html">ABOUT</a></li>
             <li><a href="../patientpages/gethelp.html">GET HELP</a>
