--- a/pages/about/schemes.html
+++ b/pages/about/schemes.html
@@ -43,7 +43,7 @@
             <div class="volunteer">
                 <h1>GOVERNMENT SCHEMES</h1>
                 <p>In order to provide effective rehabilitation services to the differently abled persons, during 1993,<br> a separate Directorate for the Rehabilitation of the Differently Abled Persons<br> was formed by bifurcating the Directorate of Social Welfare. <br> </p>
-                    <a href="../patientpages/govt.html"><button class="join">VIEW GOVERNMENT SCHEMES</button></a>
+                    <a href="../patientpages/govt.html"><button class="join">VIEW SCHEMES</button></a>
             </div>
           <img src="../../assets/images/tn.png" width="400px"  alt="error">
         </section><br>
