--- a/pages/patientpages/bookhospital.html
+++ b/pages/patientpages/bookhospital.html
@@ -50,9 +50,9 @@
         
         <div class="dropdown-menu1">
             <ul>
-                <li><a href="">9-12AM</a></li>
-                <li><a href="">12-4PM</a></li>
-                <li><a href="">4-9PAM</a></li>
+                <li><a href="booked.html">9-12AM</a></li>
+                <li><a href="booked.html">12-4PM</a></li>
+                <li><a href="booked.html">4-9PAM</a></li>
                
             </ul>
         </div>
