--- a/pages/about/aboutus.html
+++ b/pages/about/aboutus.html
@@ -12,10 +12,11 @@
     <link rel="icon" href="../../assets/images/icon.png">
     <link rel="stylesheet" href="../../assets/css/aboutus.css">
 </head>
-
+<!-- body starts  -->
 <body>
     <div class="menu-bar">
-        <img src="../../assets/images/logo.png" width="200px" alt="">
+        <img src="../../assets/images/logo.png" width="200px" alt="image error">
+        <!-- nav bar starts  -->
         <ul>
             <li><a href="../../index.html">HOME</a></li>
             <li><a href="../about/schemes.html">SCHEMES</a></li>
@@ -34,6 +35,7 @@
         </ul>
     </div>
     <main>
+        <!-- content starts  -->
         <section class="aboutsec1">
             <div class="sec1h1">
                 <h1>ABOUT US</h1>
@@ -65,7 +67,8 @@
                 <h1>ABOUT US</h1>
                 <p> Very often, people of a community want to help those in need, but do not know how they can
                     contribute,or don’t have the free time to make
-                    a significant individual contribution.<br><br> At fresh trust, we channel the goodwill of community members,
+                    a significant individual contribution.<br><br> At fresh trust, we channel the goodwill of community
+                    members,
                     organizing and coordinating contributions
                     <br> so as to effectively bring help to people in need.
                 </p>
@@ -73,16 +76,17 @@
 
         </section>
     </main>
+    <!-- footer starts  -->
     <footer>
         <div class="foot1">
-            <img src="../../assets/images/logo.png" width="180px" alt="">
+            <img src="../../assets/images/logo.png" width="180px" alt="image error">
             <div class="fb">
 
-                <a href=""> <img src="../../assets/images/facebook.png" width="45px" alt=""></a>
-                <a href=""> <img src="../../assets/images/youtube.png" width="45px" alt=""></a>
-                <a href=""> <img src="../../assets/images/insta.png" width="45px" alt=""></a>
-                <a href=""> <img src="../../assets/images/mail.png" width="45px" alt=""></a>
-                <a href=""> <img src="../../assets/images/whatsapp.png" width="45px" alt=""></a>
+                <a href=""> <img src="../../assets/images/facebook.png" width="45px" alt="image error"></a>
+                <a href=""> <img src="../../assets/images/youtube.png" width="45px" alt="image error"></a>
+                <a href=""> <img src="../../assets/images/insta.png" width="45px" alt="image error"></a>
+                <a href=""> <img src="../../assets/images/mail.png" width="45px" alt="image error"></a>
+                <a href=""> <img src="../../assets/images/whatsapp.png" width="45px" alt="image error"></a>
             </div>
         </div>
 
@@ -91,7 +95,8 @@
             <div class="add">
                 <h4>FRESHTRUST:</h4>
 
-                <p> Sathyadev Ave, opp.<br> Chettinad Vidyashram, MRC Nagar<br> Raja Annamalai Puram,<br> Chennai, Tamil Nadu 600028</p>
+                <p> Sathyadev Ave, opp.<br> Chettinad Vidyashram, MRC Nagar<br> Raja Annamalai Puram,<br> Chennai, Tamil
+                    Nadu 600028</p>
             </div>
             <div class="mail">
                 <h4>Phone numbers: (11.00 AM to 7.00 PM)</h4>
