--- a/pages/donarpages/donarlogin.html
+++ b/pages/donarpages/donarlogin.html
@@ -18,7 +18,7 @@
         <div class="formbox">
             <div class="btns">
                 <div class="logo">
-                    <img src="../../assets/images/logo.png" alt="" width="130px">
+                    <img src="../../assets/images/logo.png" alt="image error" width="130px">
                 </div>
                 <h1>Donar login</h1>
                 <hr id="log">
@@ -39,8 +39,8 @@
                     <p>Or Login With</p>
                 </div>
                 <div class="logimg">
-                    <img src="../../assets/images/facebook.png" width="50px" alt=""><img src="../../assets/images/mail.png" width="50px"
-                        alt=""><img src="../../assets/images/twitter.png" width="50px" alt="">
+                    <img src="../../assets/images/facebook.png" width="50px" alt="image error"><img src="../../assets/images/mail.png" width="50px"
+                        alt="image error"><img src="../../assets/images/twitter.png" width="50px" alt="image error">
                 </div>
                 <div class="new">
                     <p>New user</p> <a href="../donarpages/donarsignup.html">REGISTER HERE</a>
