--- a/pages/patientpages/appointment.html
+++ b/pages/patientpages/appointment.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -12,33 +13,28 @@
 </head>
 
 <body>
+  <!-- nav starts  -->
 <nav>
   <div class="menu-bar">
-    <img src="../../assets/images/logo.png" width="200px" alt="">
+    <img src="../../assets/images/logo.png" width="200px" alt="image error">
     <ul>
       <li><a href="../../index.html">HOME</a></li>
       <li><a href="../about/schemes.html">SCHEMES</a></li>
       <li><a href="../donarpages/donarlogin.html">DONATE US</a></li>
       <li><a href="../about/aboutus.html">ABOUT</a></li>
       <li><a href="gethelp.html">GET HELP</a>
-
-        <!-- <div class="dropdown-menu">
-          <ul>
-            <li><a href="patientlogin.html">Patient login</a></li>
-          </ul>
-        </div> -->
       </li>
       <li><a href="../donarpages/involve.html">GET INVOLVED</a></li>
       <li><a href="">BE INSPIRED</a></li>
     </ul>
   </div>
 </nav>
+<!-- content starts  -->
+<main>
 <div class="container">
   <div class="appimg">
     <h4>booking id:#336</h4>
-   <img src="../../assets/images/doctor.jpg" width="500px" alt="">
-   
-    <!-- <img src="../../assets/images/doctor2.jpg" width="500px" alt=""> -->
+   <img src="../../assets/images/doctor.jpg" width="500px" alt="image error">
   </div>
   <div class="abtdoc">
     <div class="texts">
@@ -61,24 +57,23 @@
     </div>
   </div>
 </div>
+</main>
+<!-- footer starts  -->
 <footer id="footer">
   <div class="foot1">
     <img src="../../assets/images/logo.png" width="180px" alt="">
     <div class="fb">
 
-      <a href=""> <img src="../../assets/images/facebook.png" width="45px" alt=""></a>
-      <a href=""> <img src="../../assets/images/youtube.png" width="45px" alt=""></a>
-      <a href=""> <img src="../../assets/images/insta.png" width="45px" alt=""></a>
-      <a href=""> <img src="../../assets/images/mail.png" width="45px" alt=""></a>
-      <a href=""> <img src="../../assets/images/whatsapp.png" width="45px" alt=""></a>
+      <a href=""> <img src="../../assets/images/facebook.png" width="45px" alt="image error"></a>
+      <a href=""> <img src="../../assets/images/youtube.png" width="45px" alt="image error"></a>
+      <a href=""> <img src="../../assets/images/insta.png" width="45px" alt="image error"></a>
+      <a href=""> <img src="../../assets/images/mail.png" width="45px" alt="image error"></a>
+      <a href=""> <img src="../../assets/images/whatsapp.png" width="45px" alt="image error"></a>
     </div>
   </div>
-
-
   <div class="foot3">
     <div class="add">
       <h4>FRESHTRUST:</h4>
-
       <p> Sathyadev Ave, opp.<br> Chettinad Vidyashram, MRC Nagar<br> Raja Annamalai Puram,<br> Chennai, Tamil Nadu 600028</p>
     </div>
     <div class="mail">
@@ -97,10 +92,8 @@
       <p>HELP</p>
       <p>DONATE</p>
       <p>BLESSED</p>
-
     </div>
   </div>
 </footer>
 </body>
-
 </html>
