--- a/pages/patientpages/booked.html
+++ b/pages/patientpages/booked.html
@@ -13,34 +13,30 @@
 </head>
 
 <body>
+    <!-- nav bar starts  -->
     <nav>
-    <div class="menu-bar">
-        <img src="../../assets/images/logo.png" width="200px" alt="bgimage">
-        <ul>
-            
-            <li><a href="../../index.html">HOME</a></li>
-            <li><a href="../about/schemes.html">SCHEMES</a></li>
-            <li><a href="../donarpages/donarlogin.html">DONATE US</a></li>
-            <li><a href="../about/aboutus.html">ABOUT</a></li>
-            <li><a href="../patientpages/gethelp.html">GET HELP</a>
+        <div class="menu-bar">
+            <img src="../../assets/images/logo.png" width="200px" alt="bgimage">
+            <ul>
 
-                <!-- 
-                    
-                 -->
-            </li>
-            <li><a href="../donarpages/involve.html">GET INVOLVED</a></li>
-            <li><a href="">BE INSPIRED</a></li>
-        </ul>
-    </div>
-</nav>
-<main>
-  
-        <img src="../../assets/images/giphy.gif" id="mygif">
+                <li><a href="../../index.html">HOME</a></li>
+                <li><a href="../about/schemes.html">SCHEMES</a></li>
+                <li><a href="../donarpages/donarlogin.html">DONATE US</a></li>
+                <li><a href="../about/aboutus.html">ABOUT</a></li>
+                <li><a href="../patientpages/gethelp.html">GET HELP</a>
+                </li>
+                <li><a href="../donarpages/involve.html">GET INVOLVED</a></li>
+                <li><a href="">BE INSPIRED</a></li>
+            </ul>
+        </div>
+    </nav>
+<!-- content starts  -->
+    <main>
+        <img src="../../assets/images/giphy.gif" id="mygif" alt="error image">
         <h1>congratulation your booking was confirmed</h1>
         <h2>click the below button to view appointment</h2>
-     <a href="../patientpages/appointment.html">  <button class="join">view now</button></a> 
-
-   
-</main>
+        <a href="../patientpages/appointment.html"> <button class="join">view now</button></a>
+    </main>
 </body>
+
 </html>
