--- a/pages/patientpages/contact.html
+++ b/pages/patientpages/contact.html
@@ -13,9 +13,10 @@
 </head>
 
 <body>
+    <!-- nav bar starts  -->
     <nav>
     <div class="menu-bar">
-        <img src="../../assets/images/logo.png" width="200px" alt="">
+        <img src="../../assets/images/logo.png" width="200px" alt="image error">
         <ul>
             
             <li><a href="../../index.html">HOME</a></li>
@@ -23,16 +24,13 @@
             <li><a href="../donarpages/donarlogin.html">DONATE US</a></li>
             <li><a href="../about/aboutus.html">ABOUT</a></li>
             <li><a href="../patientpages/gethelp.html">GET HELP</a>
-
-                <!-- 
-                    
-                 -->
             </li>
             <li><a href="../donarpages/involve.html">GET INVOLVED</a></li>
             <li><a href="">BE INSPIRED</a></li>
         </ul>
     </div>
 </nav>
+<!-- content starts  -->
 <section>
     <div class="bgimg"></div>
     <div class="contactadd">
@@ -48,3 +46,5 @@
     <h2>Contact us for more details and more products</h2>
 </div>
 </section>
+</body>
+</html>
