--- a/pages/patientpages/govt.html
+++ b/pages/patientpages/govt.html
@@ -23,16 +23,13 @@
             <li><a href="../donarpages/donarlogin.html">DONATE US</a></li>
             <li><a href="../about/aboutus.html">ABOUT</a></li>
             <li><a href="../patientpages/gethelp.html">GET HELP</a>
-
-                <!-- 
-                    
-                 -->
             </li>
             <li><a href="../donarpages/involve.html">GET INVOLVED</a></li>
             <li><a href="">BE INSPIRED</a></li>
         </ul>
     </div>
 </nav>
+<!-- body starts  -->
 <main>
     <section class="sec1">
         <div class="sec1h1">
@@ -40,7 +37,7 @@
         </div>
     </section>
     <section class="sec2">
-        <table>
+        <table aria-roledescription="Goverment Scheme">
             <tr>
               <th>State / UTs Name</th>
               <th>Disability Type</th>
@@ -230,16 +227,17 @@
           </table>
     </section>
 </main>
+<!-- footer  -->
 <footer>
     <div class="foot1">
         <img src="../../assets/images/logo.png" width="180px" alt="">
         <div class="fb">
 
-            <a href=""> <img src="../../assets/images/facebook.png" width="45px" alt=""></a>
-            <a href=""> <img src="../../assets/images/youtube.png" width="45px" alt=""></a>
-            <a href=""> <img src="../../assets/images/insta.png" width="45px" alt=""></a>
-            <a href=""> <img src="../../assets/images/mail.png" width="45px" alt=""></a>
-            <a href=""> <img src="../../assets/images/whatsapp.png" width="45px" alt=""></a>
+            <a href=""> <img src="../../assets/images/facebook.png" width="45px" alt="image error"></a>
+            <a href=""> <img src="../../assets/images/youtube.png" width="45px" alt="image error"></a>
+            <a href=""> <img src="../../assets/images/insta.png" width="45px" alt="image error"></a>
+            <a href=""> <img src="../../assets/images/mail.png" width="45px" alt="image error"></a>
+            <a href=""> <img src="../../assets/images/whatsapp.png" width="45px" alt="image error"></a>
         </div>
     </div>
 
@@ -271,5 +269,4 @@
     </div>
 </footer>
 </body>
-
 </html>
