--- a/pages/patientpages/patientlogin.html
+++ b/pages/patientpages/patientlogin.html
@@ -40,8 +40,8 @@
                     <p>Or Login With</p>
                 </div>
                 <div class="logimg">
-                    <img src="../../assets/images/facebook.png" width="50px" alt=""><img src="../../assets/images/mail.png" width="50px"
-                        alt=""><img src="../../assets/images/twitter.png" width="50px" alt="">
+                    <img src="../../assets/images/facebook.png" width="50px" alt="image"><img src="../../assets/images/mail.png" width="50px"
+                        alt="image"><img src="../../assets/images/twitter.png" width="50px" alt="imageerror">
                 </div>
                 <div class="new">
                     <p>New user </p><a href="../patientpages/patientsignup.html">REGISTER HERE</a>
