--- a/pages/volunteerpages/volunteerlogin.html
+++ b/pages/volunteerpages/volunteerlogin.html
@@ -39,8 +39,8 @@
                     <p>Or Login With</p>
                 </div>
                 <div class="logimg">
-                    <img src="../../assets/images/facebook.png" width="50px" alt=""><img src="../../assets/images/mail.png" width="50px"
-                        alt=""><img src="../../assets/images/twitter.png" width="50px" alt="">
+                    <img src="../../assets/images/facebook.png" width="50px" alt="error"><img src="../../assets/images/mail.png" width="50px"
+                        alt="error"><img src="../../assets/images/twitter.png" width="50px" alt="error">
                 </div>
                 <div class="new">
                     <p>New user </p><a href="../../pages/volunteerpages/volunteersignup.html">REGISTER HERE</a>
