--- a/pages/volunteerpages/volunteersignup.html
+++ b/pages/volunteerpages/volunteersignup.html
@@ -51,8 +51,8 @@
                     <p>Or Login With</p>
                 </div>
                 <div class="logimg">
-                    <img src="../../assets/images/facebook.png" width="50px" alt=""><img src="../../assets/images/mail.png" width="50px"
-                        alt=""><img src="../../assets/images/twitter.png" width="50px" alt="">
+                    <img src="../../assets/images/facebook.png" width="50px" alt="imageerror"><img src="../../assets/images/mail.png" width="50px"
+                        alt="imageerror"><img src="../../assets/images/twitter.png" width="50px" alt="imageerror">
                 </div>
                 <div class="new">
                     <p>Already user</p> <a href="../volunteerpages/volunteerlogin.html">login HERE</a>
@@ -62,3 +62,4 @@
         </div>
     </div>
 </body>
+</html>
