--- a/pages/patientpages/govt.html
+++ b/pages/patientpages/govt.html
@@ -37,7 +37,7 @@
         </div>
     </section>
     <section class="sec2">
-        <table aria-roledescription="Goverment Scheme">
+        <table><caption>govt scehems</caption>
             <tr>
               <th>State / UTs Name</th>
               <th>Disability Type</th>
