--- a/pages/volunteerpages/volunteerwork.html
+++ b/pages/volunteerpages/volunteerwork.html
@@ -33,7 +33,7 @@
     <main>
           <h1>18/12/22 WORKS AND AREAS</h1>  
         <section class="sec2">
-            <table aria-roledescription="works">
+            <table> <caption>work</caption>
                 <tr>
                   <th>s.no</th>
                   <th>place</th>
