--- a/pages/donarpages/donarlogin.html
+++ b/pages/donarpages/donarlogin.html
@@ -34,7 +34,7 @@
 
                 </div>
                 <hr id="logbtnhr">
-                <a href=""><button class="join">LOGIN</button></a>
+                <a href="donation.html"><button class="join">LOGIN</button></a>
                 <div class="loginimgs">
                     <p>Or Login With</p>
                 </div>
