--- a/pages/donarpages/donarsignup.html
+++ b/pages/donarpages/donarsignup.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="bottom">
                 <hr id="logbtnhr">
-                <a href=""><button class="join">LOGIN</button></a>
+                <a href="donation.html"><button class="join">LOGIN</button></a>
                 <div class="loginimgs">
                     <p>Or Login With</p>
                 </div>
