--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
       <img src="assets/images/logo.png" width="180px" alt="">
       <div class="fb">
 
-        <a href="#"> <img src="../../assets/images/facebook.png" width="45px" alt="imageerror"></a>
-        <a href="#"> <img src="../../assets/images/youtube.png" width="45px" alt="imageerror"></a>
-        <a href="#"> <img src="../../assets/images/insta.png" width="45px" alt="imageerror"></a>
-        <a href="#"> <img src="../../assets/images/mail.png" width="45px" alt="imageerror"></a>
-        <a href="#"> <img src="../../assets/images/whatsapp.png" width="45px" alt="imageerror"></a>
+        <a href="#"> <img src="assets/images/facebook.png" width="45px" alt="imageerror"></a>
+        <a href="#"> <img src="assets/images/youtube.png" width="45px" alt="imageerror"></a>
+        <a href="#"> <img src="assets/images/insta.png" width="45px" alt="imageerror"></a>
+        <a href="#"> <img src="assets/images/mail.png" width="45px" alt="imageerror"></a>
+        <a href="#"> <img src="assets/images/whatsapp.png" width="45px" alt="imageerror"></a>
       </div>
     </div>
 
