--- a/pages/patientpages/wheelchair.html
+++ b/pages/patientpages/wheelchair.html
@@ -71,19 +71,19 @@
     <img src="../../assets/images/Retrofitted petrol scooters.webp" alt="image error">
     <h1>BIKE</h1>
     <p>here BIKE for you contact to buy</p>
-    <a href="#"><button class="join">Contact</button></a>
+    <a href="bike.html"><button class="join">Contact</button></a>
 </div>
 <div class="products">
     <img src="../../assets/images/stick.jpg" alt="image error">
     <h1>STICK</h1>
     <p>here stick for you contact to buy</p>
-    <a href="#"><button class="join">Contact</button></a>
+    <a href="stick.html"><button class="join">Contact</button></a>
 </div>
 <div class="products">
     <img src="../../assets/images/black.jpg" alt="image error">
     <h1>BLACK GOGGLES</h1>
     <p>here black goggles for you contact to buy</p>
-    <a href="#"><button class="join">Contact</button></a>
+    <a href="black.html"><button class="join">Contact</button></a>
 </div>
 
 
@@ -93,30 +93,30 @@
     <img src="../../assets/images/Artificial limbs.jpg" alt="image error">
     <h1>ARTFICIAL LIMB</h1>
     <p>here artificial limb for you contact to buy</p>
-    <a href="#"><button class="join">Contact</button></a>
+    <a href="limb.html"><button class="join">Contact</button></a>
 </div>
 <div class="products">
     <img src="../../assets/images/Crutches.jpg" alt="image error">
     <h1>CRUCTHES</h1>
     <p>here crutches for you contact to buy</p>
-    <a href="#"><button class="join">Contact</button></a>
+    <a href="crutches.html"><button class="join">Contact</button></a>
 </div>
 <div class="products">
     <img src="../../assets/images/Magnifier for visually impaired students.jpg" alt="image error">
     <h1>MAGNIFIER</h1>
     <p>here magnifier for visually affected students for you contact to buy</p>
-    <a href="#"><button class="join">Contact</button></a>
+    <a href="magnifier.html"><button class="join">Contact</button></a>
 </div><div class="products">
     <img src="../../assets/images/Special hearing aids.jpg" alt="image error">
     <h1>HEARING AID</h1>
     <p>here hereing aid  for you contact to buy</p>
-    <a href="#"><button class="join">Contact</button></a>
+    <a href="hearingaid.html"><button class="join">Contact</button></a>
 </div>
 <div class="products">
     <img src="../../assets/images/tricycle.png" alt="image error">
     <h1>WHEEL CHAIR</h1>
     <p>here wheel chair for you contact to buy</p>
-    <a href="#"><button class="join">Contact</button></a>
+    <a href="tricycle.html"><button class="join">Contact</button></a>
 </div>
 </section>
 <hr>
