--- a/pages/patientpages/hearingaid.html
+++ b/pages/patientpages/hearingaid.html
@@ -33,18 +33,18 @@
 <!-- content  -->
 <main>
 <section class="sec1">
-<h1>PRODUCT-TRICYCLE</h1>
+<h1>PRODUCT-HEARING AID</h1>
 </section>
 <section class="sec2">
     <div class="triimage">
-    <img src="../../assets/images/tricycle.png" alt="error image"><br>
-    <img src="../../assets/images/tricycle1.jpg" width="200px" alt="error image">
-    <img src="../../assets/images/tricycle2.jpg" width="200px" alt="error image">
-    <img src="../../assets/images/tricycle3.jpg" width="200px" alt="error image">
+    <img src="../../assets/images/Special hearing aids.jpg"  width="500px" alt="error image"><br>
+    <img src="../../assets/images/hear.webp" width="200px" alt="error image">
+    <img src="../../assets/images/oldlady.webp" width="200px" alt="error image">
+    <img src="../../assets/images/box.webp" width="200px" alt="error image">
 </div>
 <div class="abttri">
    <h2> DESCRIPTION</h2>
-   <p>ISI Mark Handicap Tricycle Double Hand Drive </p>
+   <p>ISI Mark Handicap Heaing Aid </p>
 
 <h3>Overall Dimensions</h3>
 <ul>
