--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- nav bar -->
 <nav>
   <div class="menu-bar">
-    <img src="assets/images/logo.png" width="200px" alt="">
+    <img src="assets/images/logo.png" width="200px" alt="error">
     <ul>
       <li><a href="index.html">HOME</a></li>
       <li><a href="pages/about/schemes.html">SCHEMES</a></li>
@@ -31,7 +31,7 @@
         </div>
       </li>
       <li><a href="pages/donarpages/involve.html">GET INVOLVED</a></li>
-      <li><a href="">BE INSPIRED</a></li>
+      <li><a href="pages/beinspired/inspire.html">BE INSPIRED</a></li>
     </ul>
   </div>
 </nav>
@@ -82,7 +82,7 @@
         <p>
           “Show up, show up, show up, and after a while the muse shows up, too.”</p>
         <p>Click here to see latest motivational videos</p>
-        <br><a href=""><button class="join">SEE LATEST</button></a>
+        <br><a href="pages/beinspired/inspire.html"><button class="join">SEE LATEST</button></a>
       </div>
     </section>
     <section class="main6">
