--- a/pages/about/aboutus.html
+++ b/pages/about/aboutus.html
@@ -22,7 +22,7 @@
             <li><a href="../about/schemes.html">SCHEMES</a></li>
             <li><a href="../donarpages/donarlogin.html">DONATE US</a></li>
             <li><a href="../about/aboutus.html">ABOUT</a></li>
-            <li><a href="#">GET HELP</a>
+            <li><a href="../beinspired/inspire.html">GET HELP</a>
 
                 <div class="dropdown-menu">
                     <ul>
