--- a/pages/patientpages/buyproducts.html
+++ b/pages/patientpages/buyproducts.html
@@ -25,7 +25,7 @@
             <li><a href="../patientpages/gethelp.html">GET HELP</a>
             </li>
             <li><a href="../donarpages/involve.html">GET INVOLVED</a></li>
-            <li><a href="">BE INSPIRED</a></li>
+            <li><a href="../beinspired/inspire.html">BE INSPIRED</a></li>
         </ul>
     </div>
 </nav>
