--- a/pages/donarpages/donation.html
+++ b/pages/donarpages/donation.html
@@ -19,12 +19,12 @@
         <img src="../../assets/images/logo.png" width="200px" alt="image error">
         <ul>
             <li><a href="../../index.html">HOME</a></li>
-            <li><a href="index.html">SCHEMES</a></li>
+            <li><a href="../about/schemes.html">SCHEMES</a></li>
             <li><a href="../donarpages/donarlogin.html">DONATE US</a></li>
             <li><a href="../about/aboutus.html">ABOUT</a></li>
             <li><a href="../patientpages/gethelp.html">GET HELP</a> </li>
             <li><a href="../donarpages/involve.html">GET INVOLVED</a></li>
-            <li><a href="">BE INSPIRED</a></li>
+            <li><a href="../beinspired/inspire.html">BE INSPIRED</a></li>
         </ul>
     </div>
 </nav>
