--- a/pages/about/aboutus.html
+++ b/pages/about/aboutus.html
@@ -22,7 +22,7 @@
             <li><a href="../about/schemes.html">SCHEMES</a></li>
             <li><a href="../donarpages/donarlogin.html">DONATE US</a></li>
             <li><a href="../about/aboutus.html">ABOUT</a></li>
-            <li><a href="../beinspired/inspire.html">GET HELP</a>
+            <li><a href="">GET HELP</a>
 
                 <div class="dropdown-menu">
                     <ul>
@@ -31,7 +31,7 @@
                 </div>
             </li>
             <li><a href="../donarpages/involve.html">GET INVOLVED</a></li>
-            <li><a href="">BE INSPIRED</a></li>
+            <li><a href="../beinspired/inspire.html">BE INSPIRED</a></li>
         </ul>
     </div>
     <main>
@@ -41,9 +41,9 @@
                 <h1>ABOUT US</h1>
             </div>
             <div class="words">
-                <p>For us, it's not just about bringing you good food from your favourite restaurants. It's about making
-                    a connection, which is why we sit down with the chefs, dreaming up </p>
-                <p>menus that will arrive fresh and full of flavour. Try us! </p>
+                <p>For us, it's not just about bringing goodthing to diffrently abled people . It's about making
+                    a connection, which is  we sit down with them and  dreaming up </p>
+                <p>we help if god will help us </p>
             </div>
             <div class="works">
                 <h1>MOTO</h1>
