--- a/pages/donarpages/donation.html
+++ b/pages/donarpages/donation.html
@@ -78,15 +78,15 @@
 <hr id="hr">
 <div class="paymentimgs">
     <h2>PAY WITH</h2>
-    <img src="../../assets/images/icons8-bank-transfer-49.png" alt="eror">
-    <img src="../../assets/images/gpay.png" alt="eror">
-    <img src="../../assets/images/icons8-bhim-upi-50.png" alt="eror">
-    <img src="../../assets/images/icons8-paytm-48.png" alt="eror">
+   <a href="#"> <img src="../../assets/images/icons8-bank-transfer-49.png" alt="eror"></a>
+   <a href="#"> <img src="../../assets/images/gpay.png" alt="eror"></a>
+   <a href="#"><img src="../../assets/images/icons8-bhim-upi-50.png" alt="eror"></a>
+   <a href="#"><img src="../../assets/images/icons8-paytm-48.png" alt="eror"></a>
     <h3>or</h3>
-    <img src="../../assets/images/icons8-card-payment-50.png" alt="eror">
-    <img src="../../assets/images/icons8-merchant-account-48.png" alt="eror">
-    <img src="../../assets/images/icons8-paypal-48.png" alt="eror">
-    <img src="../../assets/images/icons8-coin-in-hand-30.png" alt="eror">
+    <a href="#"><img src="../../assets/images/icons8-card-payment-50.png" alt="eror"></a>
+    <a href="#"><img src="../../assets/images/icons8-merchant-account-48.png" alt="eror"></a>
+    <a href="#"><img src="../../assets/images/icons8-paypal-48.png" alt="eror"></a>
+    <a href="#"><img src="../../assets/images/icons8-coin-in-hand-30.png" alt="eror"></a>
     <p>when We Give Cheerfully And Accept Gratefully, Everyone Is Blessed</p>
 </div>
 
