--- a/pages/patientpages/buyproducts.html
+++ b/pages/patientpages/buyproducts.html
@@ -35,8 +35,8 @@
             <h1>BUY PRODUCTS</h1>
         </div>
         <section class="sec2">
-            <h2>Here you can book the hospitals which is nearby you.<br>Here the list of hospitals which is collabed with trust<br>
-                You can get medical help free and low cost</h2>
+            <h2>Here you can buy the products .<br>Here the list of products which is we collabed with shops<br>
+                You can get products free and low cost</h2>
             </section>
             <section class="sec3">
                 <div class="products">
