--- a/pages/volunteerpages/volunteersignup.html
+++ b/pages/volunteerpages/volunteersignup.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/signup.css">
+    <link rel="stylesheet" href="../../assets/css/signup.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="icon" href="../../assets/images/icon.png">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700&display=swap">
