--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <div class="dropdown-menu">
           <ul>
-            <li><a href="pages/patientpages/patientlogin.html">Patient login</a></li>
+            <li><a href="pages/patientpages/patientlogin.html">User login</a></li>
           </ul>
         </div>
       </li>
@@ -43,7 +43,7 @@
         <p>
           We are fresh trust for the people who are diffrently abled peoples</p>
         <p>Scroll down to see more about us</p>
-        <img src="assets/images/icon-arrow-down.svg" alt="">
+        <img src="assets/images/icon-arrow-down.svg" alt="error">
 
       </div>
     </section>
