--- a/pages/about/aboutus.html
+++ b/pages/about/aboutus.html
@@ -26,7 +26,7 @@
 
                 <div class="dropdown-menu">
                     <ul>
-                        <li><a href="../patientpages/patientlogin.html">Patient login</a></li>
+                        <li><a href="../patientpages/patientlogin.html">User login</a></li>
                     </ul>
                 </div>
             </li>
