--- a/pages/patientpages/patientlogin.html
+++ b/pages/patientpages/patientlogin.html
@@ -21,7 +21,7 @@
                 <div class="logo">
                     <img src="../../assets/images/logo.png" alt="" width="130px">
                 </div>
-                <h1>Patient Login</h1>
+                <h1>User Login</h1>
                 <hr id="log">
                 <div class="mail">
                     <p>Email Address</p>
