--- a/pages/patientpages/patientsignup.html
+++ b/pages/patientpages/patientsignup.html
@@ -20,7 +20,7 @@
                 </div>
 
 
-                <h1>Patient Signup</h1>
+                <h1>User Signup</h1>
                 <hr id="log">
                 <div class="firstname">
                     <p> Name</p>
